--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1 align=center>Deutschland
     </h1>
     <p align=center><img src=GERMANY.png></p>
-    <p align=center><img src=map of germany.jpeg></p>
+    <p align=center><img src=map.jpeg></p>
     <h2>Culture</h2>
     <iframe <iframe width="560" height="315" src="https://www.youtube.com/embed/oEHumDT8xwY?si=PcBewa2I36PxVpwd" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
      <h2>Food</h2>
